src/parser.output
Terminals unused in grammar

    STATIC
    AUTO
    REGISTER
    CONST
    VOLATILE
    STRUCT
    UNION
    ELLIPSIS
    GOTO


State 284 conflicts: 1 shift/reduce


Grammar

    0 $accept: begin $end

    1 primary_expression: IDENTIFIER
    2                   | CONSTANT
    3                   | STRING_LITERAL
    4                   | '(' expression ')'

    5 postfix_expression: primary_expression
    6                   | postfix_expression '[' expression ']'
    7                   | postfix_expression '(' ')'
    8                   | postfix_expression '(' argument_expression_list ')'
    9                   | postfix_expression '.' IDENTIFIER
   10                   | postfix_expression PTR_OP IDENTIFIER
   11                   | postfix_expression INC_OP
   12                   | postfix_expression DEC_OP

   13 argument_expression_list: assignment_expression
   14                         | argument_expression_list ',' assignment_expression

   15 unary_expression: postfix_expression
   16                 | INC_OP unary_expression
   17                 | DEC_OP unary_expression
   18                 | unary_operator cast_expression
   19                 | SIZEOF unary_expression
   20                 | SIZEOF '(' type_name ')'

   21 unary_operator: '&'
   22               | '*'
   23               | '+'
   24               | '-'
   25               | '~'
   26               | '!'

   27 cast_expression: unary_expression
   28                | '(' type_name ')' cast_expression

   29 multiplicative_expression: cast_expression
   30                          | multiplicative_expression '*' cast_expression
   31                          | multiplicative_expression '/' cast_expression
   32                          | multiplicative_expression '%' cast_expression

   33 additive_expression: multiplicative_expression
   34                    | additive_expression '+' multiplicative_expression
   35                    | additive_expression '-' multiplicative_expression

   36 shift_expression: additive_expression
   37                 | shift_expression LEFT_OP additive_expression
   38                 | shift_expression RIGHT_OP additive_expression

   39 relational_expression: shift_expression
   40                      | relational_expression '<' shift_expression
   41                      | relational_expression '>' shift_expression
   42                      | relational_expression LE_OP shift_expression
   43                      | relational_expression GE_OP shift_expression

   44 equality_expression: relational_expression
   45                    | equality_expression EQ_OP relational_expression
   46                    | equality_expression NE_OP relational_expression

   47 and_expression: equality_expression
   48               | and_expression '&' equality_expression

   49 exclusive_or_expression: and_expression
   50                        | exclusive_or_expression '^' and_expression

   51 inclusive_or_expression: exclusive_or_expression
   52                        | inclusive_or_expression '|' exclusive_or_expression

   53 logical_and_expression: inclusive_or_expression
   54                       | logical_and_expression AND_OP inclusive_or_expression

   55 logical_or_expression: logical_and_expression
   56                      | logical_or_expression OR_OP logical_and_expression

   57 conditional_expression: logical_or_expression
   58                       | logical_or_expression '?' expression ':' conditional_expression

   59 assignment_expression: conditional_expression
   60                      | unary_expression assignment_operator assignment_expression

   61 assignment_operator: '='
   62                    | MUL_ASSIGN
   63                    | DIV_ASSIGN
   64                    | MOD_ASSIGN
   65                    | ADD_ASSIGN
   66                    | SUB_ASSIGN
   67                    | LEFT_ASSIGN
   68                    | RIGHT_ASSIGN
   69                    | AND_ASSIGN
   70                    | XOR_ASSIGN
   71                    | OR_ASSIGN

   72 expression: assignment_expression
   73           | expression ',' assignment_expression

   74 constant_expression: conditional_expression

   75 declaration: declaration_specifiers ';'
   76            | declaration_specifiers init_declarator_list ';'

   77 declaration_specifiers: storage_class_specifier
   78                       | storage_class_specifier declaration_specifiers
   79                       | type_specifier
   80                       | type_specifier declaration_specifiers

   81 init_declarator_list: init_declarator
   82                     | init_declarator_list ',' init_declarator

   83 init_declarator: declarator
   84                | declarator '=' initializer

   85 storage_class_specifier: TYPEDEF
   86                        | EXTERN

   87 type_specifier: VOID
   88               | CHAR
   89               | SHORT
   90               | INT
   91               | LONG
   92               | FLOAT
   93               | DOUBLE
   94               | SIGNED
   95               | UNSIGNED
   96               | enum_specifier
   97               | TYPE_NAME

   98 specifier_qualifier_list: type_specifier specifier_qualifier_list
   99                         | type_specifier

  100 enum_specifier: ENUM '{' enumerator_list '}'
  101               | ENUM IDENTIFIER '{' enumerator_list '}'
  102               | ENUM IDENTIFIER

  103 enumerator_list: enumerator
  104                | enumerator_list ',' enumerator

  105 enumerator: IDENTIFIER
  106           | IDENTIFIER '=' constant_expression

  107 declarator: pointer direct_declarator
  108           | direct_declarator

  109 direct_declarator: IDENTIFIER
  110                  | '(' declarator ')'
  111                  | direct_declarator '[' constant_expression ']'
  112                  | direct_declarator '[' ']'
  113                  | direct_declarator '(' parameter_type_list ')'
  114                  | direct_declarator '(' ')'

  115 pointer: '*'
  116        | '*' pointer

  117 parameter_type_list: parameter_list

  118 parameter_list: parameter_declaration
  119               | parameter_list ',' parameter_declaration

  120 parameter_declaration: declaration_specifiers declarator
  121                      | declaration_specifiers abstract_declarator
  122                      | declaration_specifiers

  123 type_name: specifier_qualifier_list
  124          | specifier_qualifier_list abstract_declarator

  125 abstract_declarator: pointer
  126                    | direct_abstract_declarator
  127                    | pointer direct_abstract_declarator

  128 direct_abstract_declarator: '(' abstract_declarator ')'
  129                           | '[' ']'
  130                           | '[' constant_expression ']'
  131                           | direct_abstract_declarator '[' ']'
  132                           | direct_abstract_declarator '[' constant_expression ']'
  133                           | '(' ')'
  134                           | '(' parameter_type_list ')'
  135                           | direct_abstract_declarator '(' ')'
  136                           | direct_abstract_declarator '(' parameter_type_list ')'

  137 initializer: assignment_expression
  138            | '{' initializer_list '}'
  139            | '{' initializer_list ',' '}'

  140 initializer_list: initializer
  141                 | initializer_list ',' initializer

  142 statement: labeled_statement
  143          | compound_statement
  144          | expression_statement
  145          | selection_statement
  146          | iteration_statement
  147          | jump_statement

  148 labeled_statement: IDENTIFIER ':' statement
  149                  | CASE constant_expression ':' statement
  150                  | DEFAULT ':' statement

  151 compound_statement: '{' '}'
  152                   | '{' statement_list '}'
  153                   | '{' declaration_list '}'
  154                   | '{' declaration_list statement_list '}'

  155 declaration_list: declaration
  156                 | declaration_list declaration

  157 statement_list: statement
  158               | statement_list statement

  159 expression_statement: ';'
  160                     | expression ';'

  161 selection_statement: IF '(' expression ')' statement
  162                    | IF '(' expression ')' statement ELSE statement
  163                    | SWITCH '(' expression ')' statement

  164 iteration_statement: WHILE '(' expression ')' statement
  165                    | DO statement WHILE '(' expression ')' ';'
  166                    | FOR '(' expression_statement expression_statement ')' statement
  167                    | FOR '(' expression_statement expression_statement expression ')' statement

  168 jump_statement: CONTINUE ';'
  169               | BREAK ';'
  170               | RETURN ';'
  171               | RETURN expression ';'

  172 translation_unit: external_declaration
  173                 | translation_unit external_declaration

  174 begin: translation_unit

  175 external_declaration: function_definition
  176                     | declaration

  177 function_definition: declaration_specifiers declarator compound_statement
  178                    | declarator compound_statement


Terminals, with rules where they appear

    $end (0) 0
    '!' (33) 26
    '%' (37) 32
    '&' (38) 21 48
    '(' (40) 4 7 8 20 28 110 113 114 128 133 134 135 136 161 162 163 164 165 166 167
    ')' (41) 4 7 8 20 28 110 113 114 128 133 134 135 136 161 162 163 164 165 166 167
    '*' (42) 22 30 115 116
    '+' (43) 23 34
    ',' (44) 14 73 82 104 119 139 141
    '-' (45) 24 35
    '.' (46) 9
    '/' (47) 31
    ':' (58) 58 148 149 150
    ';' (59) 75 76 159 160 165 168 169 170 171
    '<' (60) 40
    '=' (61) 61 84 106
    '>' (62) 41
    '?' (63) 58
    '[' (91) 6 111 112 129 130 131 132
    ']' (93) 6 111 112 129 130 131 132
    '^' (94) 50
    '{' (123) 100 101 138 139 151 152 153 154
    '|' (124) 52
    '}' (125) 100 101 138 139 151 152 153 154
    '~' (126) 25
    error (256)
    IDENTIFIER <str> (258) 1 9 10 101 102 105 106 109 148
    CONSTANT <str> (259) 2
    STRING_LITERAL <str> (260) 3
    SIZEOF (261) 19 20
    PTR_OP (262) 10
    INC_OP (263) 11 16
    DEC_OP (264) 12 17
    LEFT_OP (265) 37
    RIGHT_OP (266) 38
    LE_OP (267) 42
    GE_OP (268) 43
    EQ_OP (269) 45
    NE_OP (270) 46
    AND_OP (271) 54
    OR_OP (272) 56
    MUL_ASSIGN (273) 62
    DIV_ASSIGN (274) 63
    MOD_ASSIGN (275) 64
    ADD_ASSIGN (276) 65
    SUB_ASSIGN (277) 66
    LEFT_ASSIGN (278) 67
    RIGHT_ASSIGN (279) 68
    AND_ASSIGN (280) 69
    XOR_ASSIGN (281) 70
    OR_ASSIGN (282) 71
    TYPE_NAME (283) 97
    TYPEDEF (284) 85
    EXTERN (285) 86
    STATIC (286)
    AUTO (287)
    REGISTER (288)
    CHAR (289) 88
    SHORT (290) 89
    INT (291) 90
    LONG (292) 91
    SIGNED (293) 94
    UNSIGNED (294) 95
    FLOAT (295) 92
    DOUBLE (296) 93
    CONST (297)
    VOLATILE (298)
    VOID (299) 87
    STRUCT (300)
    UNION (301)
    ENUM (302) 100 101 102
    ELLIPSIS (303)
    CASE (304) 149
    DEFAULT (305) 150
    IF (306) 161 162
    ELSE (307) 162
    SWITCH (308) 163
    WHILE (309) 164 165
    DO (310) 165
    FOR (311) 166 167
    GOTO (312)
    CONTINUE (313) 168
    BREAK (314) 169
    RETURN (315) 170 171


Nonterminals, with rules where they appear

    $accept (85)
        on left: 0
    primary_expression <expr> (86)
        on left: 1 2 3 4
        on right: 5
    postfix_expression <expr> (87)
        on left: 5 6 7 8 9 10 11 12
        on right: 6 7 8 9 10 11 12 15
    argument_expression_list <expr> (88)
        on left: 13 14
        on right: 8 14
    unary_expression <expr> (89)
        on left: 15 16 17 18 19 20
        on right: 16 17 19 27 60
    unary_operator <number> (90)
        on left: 21 22 23 24 25 26
        on right: 18
    cast_expression <expr> (91)
        on left: 27 28
        on right: 18 28 29 30 31 32
    multiplicative_expression <expr> (92)
        on left: 29 30 31 32
        on right: 30 31 32 33 34 35
    additive_expression <expr> (93)
        on left: 33 34 35
        on right: 34 35 36 37 38
    shift_expression <expr> (94)
        on left: 36 37 38
        on right: 37 38 39 40 41 42 43
    relational_expression <expr> (95)
        on left: 39 40 41 42 43
        on right: 40 41 42 43 44 45 46
    equality_expression <expr> (96)
        on left: 44 45 46
        on right: 45 46 47 48
    and_expression <expr> (97)
        on left: 47 48
        on right: 48 49 50
    exclusive_or_expression <expr> (98)
        on left: 49 50
        on right: 50 51 52
    inclusive_or_expression <expr> (99)
        on left: 51 52
        on right: 52 53 54
    logical_and_expression <expr> (100)
        on left: 53 54
        on right: 54 55 56
    logical_or_expression <expr> (101)
        on left: 55 56
        on right: 56 57 58
    conditional_expression <expr> (102)
        on left: 57 58
        on right: 58 59 74
    assignment_expression <expr> (103)
        on left: 59 60
        on right: 13 14 60 72 73 137
    assignment_operator <number> (104)
        on left: 61 62 63 64 65 66 67 68 69 70 71
        on right: 60
    expression <expr> (105)
        on left: 72 73
        on right: 4 6 58 73 160 161 162 163 164 165 167 171
    constant_expression <expr> (106)
        on left: 74
        on right: 106 111 130 132 149
    declaration <expr> (107)
        on left: 75 76
        on right: 155 156 176
    declaration_specifiers <expr> (108)
        on left: 77 78 79 80
        on right: 75 76 78 80 120 121 122 177
    init_declarator_list <expr> (109)
        on left: 81 82
        on right: 76 82
    init_declarator <expr> (110)
        on left: 83 84
        on right: 81 82
    storage_class_specifier <expr> (111)
        on left: 85 86
        on right: 77 78
    type_specifier <expr> (112)
        on left: 87 88 89 90 91 92 93 94 95 96 97
        on right: 79 80 98 99
    specifier_qualifier_list <expr> (113)
        on left: 98 99
        on right: 98 123 124
    enum_specifier <expr> (114)
        on left: 100 101 102
        on right: 96
    enumerator_list <expr> (115)
        on left: 103 104
        on right: 100 101 104
    enumerator <expr> (116)
        on left: 105 106
        on right: 103 104
    declarator <expr> (117)
        on left: 107 108
        on right: 83 84 110 120 177 178
    direct_declarator <expr> (118)
        on left: 109 110 111 112 113 114
        on right: 107 108 111 112 113 114
    pointer <expr> (119)
        on left: 115 116
        on right: 107 116 125 127
    parameter_type_list <expr> (120)
        on left: 117
        on right: 113 134 136
    parameter_list <expr> (121)
        on left: 118 119
        on right: 117 119
    parameter_declaration <expr> (122)
        on left: 120 121 122
        on right: 118 119
    type_name <expr> (123)
        on left: 123 124
        on right: 20 28
    abstract_declarator <expr> (124)
        on left: 125 126 127
        on right: 121 124 128
    direct_abstract_declarator <expr> (125)
        on left: 128 129 130 131 132 133 134 135 136
        on right: 126 127 131 132 135 136
    initializer <expr> (126)
        on left: 137 138 139
        on right: 84 140 141
    initializer_list <expr> (127)
        on left: 140 141
        on right: 138 139 141
    statement <expr> (128)
        on left: 142 143 144 145 146 147
        on right: 148 149 150 157 158 161 162 163 164 165 166 167
    labeled_statement <expr> (129)
        on left: 148 149 150
        on right: 142
    compound_statement <expr> (130)
        on left: 151 152 153 154
        on right: 143 177 178
    declaration_list <expr> (131)
        on left: 155 156
        on right: 153 154 156
    statement_list <expr> (132)
        on left: 157 158
        on right: 152 154 158
    expression_statement <expr> (133)
        on left: 159 160
        on right: 144 166 167
    selection_statement <expr> (134)
        on left: 161 162 163
        on right: 145
    iteration_statement <expr> (135)
        on left: 164 165 166 167
        on right: 146
    jump_statement <expr> (136)
        on left: 168 169 170 171
        on right: 147
    translation_unit <expr> (137)
        on left: 172 173
        on right: 173 174
    begin (138)
        on left: 174
        on right: 0
    external_declaration <expr> (139)
        on left: 175 176
        on right: 172 173
    function_definition <expr> (140)
        on left: 177 178
        on right: 175


State 0

    0 $accept: . begin $end

    IDENTIFIER  shift, and go to state 1
    TYPE_NAME   shift, and go to state 2
    TYPEDEF     shift, and go to state 3
    EXTERN      shift, and go to state 4
    CHAR        shift, and go to state 5
    SHORT       shift, and go to state 6
    INT         shift, and go to state 7
    LONG        shift, and go to state 8
    SIGNED      shift, and go to state 9
    UNSIGNED    shift, and go to state 10
    FLOAT       shift, and go to state 11
    DOUBLE      shift, and go to state 12
    VOID        shift, and go to state 13
    ENUM        shift, and go to state 14
    '('         shift, and go to state 15
    '*'         shift, and go to state 16

    declaration              go to state 17
    declaration_specifiers   go to state 18
    storage_class_specifier  go to state 19
    type_specifier           go to state 20
    enum_specifier           go to state 21
    declarator               go to state 22
    direct_declarator        go to state 23
    pointer                  go to state 24
    translation_unit         go to state 25
    begin                    go to state 26
    external_declaration     go to state 27
    function_definition      go to state 28


State 1

  109 direct_declarator: IDENTIFIER .

    $default  reduce using rule 109 (direct_declarator)


State 2

   97 type_specifier: TYPE_NAME .

    $default  reduce using rule 97 (type_specifier)


State 3

   85 storage_class_specifier: TYPEDEF .

    $default  reduce using rule 85 (storage_class_specifier)


State 4

   86 storage_class_specifier: EXTERN .

    $default  reduce using rule 86 (storage_class_specifier)


State 5

   88 type_specifier: CHAR .

    $default  reduce using rule 88 (type_specifier)


State 6

   89 type_specifier: SHORT .

    $default  reduce using rule 89 (type_specifier)


State 7

   90 type_specifier: INT .

    $default  reduce using rule 90 (type_specifier)


State 8

   91 type_specifier: LONG .

    $default  reduce using rule 91 (type_specifier)


State 9

   94 type_specifier: SIGNED .

    $default  reduce using rule 94 (type_specifier)


State 10

   95 type_specifier: UNSIGNED .

    $default  reduce using rule 95 (type_specifier)


State 11

   92 type_specifier: FLOAT .

    $default  reduce using rule 92 (type_specifier)


State 12

   93 type_specifier: DOUBLE .

    $default  reduce using rule 93 (type_specifier)


State 13

   87 type_specifier: VOID .

    $default  reduce using rule 87 (type_specifier)


State 14

  100 enum_specifier: ENUM . '{' enumerator_list '}'
  101               | ENUM . IDENTIFIER '{' enumerator_list '}'
  102               | ENUM . IDENTIFIER

    IDENTIFIER  shift, and go to state 29
    '{'         shift, and go to state 30


State 15

  110 direct_declarator: '(' . declarator ')'

    IDENTIFIER  shift, and go to state 1
    '('         shift, and go to state 15
    '*'         shift, and go to state 16

    declarator         go to state 31
    direct_declarator  go to state 23
    pointer            go to state 24


State 16

  115 pointer: '*' .
  116        | '*' . pointer

    '*'  shift, and go to state 16

    $default  reduce using rule 115 (pointer)

    pointer  go to state 32


State 17

  176 external_declaration: declaration .

    $default  reduce using rule 176 (external_declaration)


State 18

   75 declaration: declaration_specifiers . ';'
   76            | declaration_specifiers . init_declarator_list ';'
  177 function_definition: declaration_specifiers . declarator compound_statement

    IDENTIFIER  shift, and go to state 1
    '('         shift, and go to state 15
    '*'         shift, and go to state 16
    ';'         shift, and go to state 33

    init_declarator_list  go to state 34
    init_declarator       go to state 35
    declarator            go to state 36
    direct_declarator     go to state 23
    pointer               go to state 24


State 19

   77 declaration_specifiers: storage_class_specifier .
   78                       | storage_class_specifier . declaration_specifiers

    TYPE_NAME  shift, and go to state 2
    TYPEDEF    shift, and go to state 3
    EXTERN     shift, and go to state 4
    CHAR       shift, and go to state 5
    SHORT      shift, and go to state 6
    INT        shift, and go to state 7
    LONG       shift, and go to state 8
    SIGNED     shift, and go to state 9
    UNSIGNED   shift, and go to state 10
    FLOAT      shift, and go to state 11
    DOUBLE     shift, and go to state 12
    VOID       shift, and go to state 13
    ENUM       shift, and go to state 14

    $default  reduce using rule 77 (declaration_specifiers)

    declaration_specifiers   go to state 37
    storage_class_specifier  go to state 19
    type_specifier           go to state 20
    enum_specifier           go to state 21


State 20

   79 declaration_specifiers: type_specifier .
   80                       | type_specifier . declaration_specifiers

    TYPE_NAME  shift, and go to state 2
    TYPEDEF    shift, and go to state 3
    EXTERN     shift, and go to state 4
    CHAR       shift, and go to state 5
    SHORT      shift, and go to state 6
    INT        shift, and go to state 7
    LONG       shift, and go to state 8
    SIGNED     shift, and go to state 9
    UNSIGNED   shift, and go to state 10
    FLOAT      shift, and go to state 11
    DOUBLE     shift, and go to state 12
    VOID       shift, and go to state 13
    ENUM       shift, and go to state 14

    $default  reduce using rule 79 (declaration_specifiers)

    declaration_specifiers   go to state 38
    storage_class_specifier  go to state 19
    type_specifier           go to state 20
    enum_specifier           go to state 21


State 21

   96 type_specifier: enum_specifier .

    $default  reduce using rule 96 (type_specifier)

